--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 				padding: 0;
 			}
 			body{
-				background-image: url('img/tu3.png') ;
+				background-image: url('img/d2.jpg') ;
 				background-size:cover;   /图片充满整个屏幕
 				position: relative;   /body元素相对定位属性
 			}
